--- a/src/Macaria.SPA/Macaria.SPA.csproj
+++ b/src/Macaria.SPA/Macaria.SPA.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -12,28 +12,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-preview2-final" />
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.0-preview2-final" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0-rc1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.0-rc1-final" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="ClientApp\src\app\core\error.service.ts" />
-    <None Remove="ClientApp\src\app\notes\note-resolver.service.ts" />
-    <None Remove="ClientApp\src\app\shared\shared.module.ts" />
-    <None Remove="ClientApp\src\app\tags\tags-resolver.service.ts" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <TypeScriptCompile Include="ClientApp\src\app\core\error.service.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\notes\note-resolver.service.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\shared\shared.module.ts" />
-    <TypeScriptCompile Include="ClientApp\src\app\tags\tags-resolver.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
